--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chris' Personal Website</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="images/profile.jpg" alt="Christopher Lia Profile Picture" width="250">
+                <img id="profilePic" src="images/profile.jpg" alt="Christopher Lia Profile Picture">
             </td>
             <td>
                 <h1>Christopher Lia</h1>
-                    <p><em>Web Security Engineer</em></p>
+                    <p id="jobTitle"><em>Web Security Engineer</em></p>
                     <p>My name is Christopher Lia. I am an aspiring <strong><a href="https://en.wikipedia.org/wiki/Penetration_test">Penetration Tester</a></strong>. This is my website to learn front end development.</p>
             </td>
         </tr>
@@ -22,10 +24,10 @@
     <hr>
     <h3>Educational Background</h3>
         <ul>
-            <li><a href="https://tallwoodhs.vbschools.com/">Tallwoood High School</a></li>
-            <li><a href="https://www.tcc.edu/">Tidewater Community College</a></li>
-            <li><a href="https://www.odu.edu/">Old Dominion University</a></li>
             <li><a href="https://www.wgu.edu/">Western Governor's University</a></li>
+            <li><a href="https://www.odu.edu/">Old Dominion University</a></li>
+            <li><a href="https://www.tcc.edu/">Tidewater Community College</a></li>
+            <li><a href="https://tallwoodhs.vbschools.com/">Tallwoood High School</a></li>
         </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -44,6 +46,10 @@
                 <tr>
                     <td>2021 - 2022</td>
                     <td>IT Systems Engineer at Luanta Limited</td>
+                </tr>
+                <tr>
+                    <td>2018 - 2021</td>
+                    <td>English Teacher at HESS</td>
                 </tr>
             </tbody>
         </table>
